// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormFieldset /> create form field set 1`] = `
<fieldset
  className="fd-form__set"
>
  <legend
    className="fd-form__legend blue"
  >
    Radio buttons
  </legend>
  <div
    className="blue"
  >
    <div
      className="fd-form__item fd-form__item--check"
    >
      <label
        className="fd-form__label"
      >
        <input
          className="fd-form__control"
          id="radio-1"
          name="radio-group-1"
          onChange={[Function]}
          type="radio"
          value="radio-1"
        />
        Option 1
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <label
        className="fd-form__label"
      >
        <input
          checked={true}
          className="fd-form__control"
          id="radio-2"
          name="radio-group-1"
          onChange={[Function]}
          type="radio"
          value="radio-2"
        />
        Option 2
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <label
        className="fd-form__label"
      >
        <input
          className="fd-form__control"
          id="radio-3"
          name="radio-group-1"
          onChange={[Function]}
          type="radio"
          value="radio-3"
        />
        Option 3
      </label>
    </div>
  </div>
  <legend
    className="fd-form__legend"
    legendText="Radio buttons disabled"
  />
  <div
    className="blue"
  >
    <div
      className="fd-form__item fd-form__item--check fd-form__item--inline"
    >
      <label
        className="fd-form__label"
      >
        <input
          checked={true}
          className="fd-form__control"
          disabled={true}
          id="radio-4"
          name="radio-group-2"
          onChange={[Function]}
          type="radio"
          value="radio-4"
        />
        Option 1
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check fd-form__item--inline"
    >
      <label
        className="fd-form__label"
      >
        <input
          className="fd-form__control"
          disabled={true}
          id="radio-5"
          name="radio-group-2"
          onChange={[Function]}
          type="radio"
          value="radio-5"
        />
        Option 2
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check fd-form__item--inline"
    >
      <label
        className="fd-form__label"
      >
        <input
          className="fd-form__control"
          disabled={true}
          id="radio-6"
          name="radio-group-2"
          onChange={[Function]}
          type="radio"
          value="radio-6"
        />
        Option 3
      </label>
    </div>
  </div>
  <legend
    className="fd-form__legend"
    legendText="Inline Radio buttons"
  />
  <div
    className="blue"
  >
    <div
      className="fd-form__item fd-form__item--check fd-form__item--inline"
    >
      <label
        className="fd-form__label"
      >
        <input
          className="fd-form__control"
          id="radio-7"
          name="radio-group-3"
          onChange={[Function]}
          type="radio"
          value="radio-7"
        />
        Option 1
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check fd-form__item--inline"
    >
      <label
        className="fd-form__label"
      >
        <input
          className="fd-form__control"
          id="radio-8"
          name="radio-group-3"
          onChange={[Function]}
          type="radio"
          value="radio-8"
        />
        Option 2
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check fd-form__item--inline"
    >
      <label
        className="fd-form__label"
      >
        <input
          checked={true}
          className="fd-form__control"
          id="radio-9"
          name="radio-group-3"
          onChange={[Function]}
          type="radio"
          value="radio-9"
        />
        Option 3
      </label>
    </div>
  </div>
  <div
    className="blue"
  >
    <div
      className="fd-form__item fd-form__item--check fd-form__item--inline"
    >
      <label
        className="fd-form__label"
      >
        <input
          className="fd-form__control"
          disabled={true}
          id="radio-7"
          name="radio-group-4"
          onChange={[Function]}
          type="radio"
          value="radio-7"
        />
        Option 1
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check fd-form__item--inline"
    >
      <label
        className="fd-form__label"
      >
        <input
          className="fd-form__control"
          disabled={true}
          id="radio-8"
          name="radio-group-4"
          onChange={[Function]}
          type="radio"
          value="radio-8"
        />
        Option 2
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check fd-form__item--inline"
    >
      <label
        className="fd-form__label"
      >
        <input
          checked={true}
          className="fd-form__control"
          disabled={true}
          id="radio-9"
          name="radio-group-4"
          onChange={[Function]}
          type="radio"
          value="radio-9"
        />
        Option 3
      </label>
    </div>
  </div>
  <legend
    className="fd-form__legend"
    legendText="Checkboxes"
  />
  <div
    className="fd-form__item fd-form__item--check blue"
  >
    <input
      className="fd-form__control blue"
      id="checkbox-1"
      name="checkbox-name-1"
      type="checkbox"
      value=""
    />
    <label
      className="fd-form__label blue"
      forAttr="checkbox-1"
    >
      Option One
      
    </label>
  </div>
</fieldset>
`;

exports[`<FormFieldset /> create form field set 2`] = `
<fieldset
  className="fd-form__set blue"
>
  <legend
    className="fd-form__legend blue"
  >
    Radio buttons
  </legend>
  <div
    className="blue"
  >
    <div
      className="fd-form__item fd-form__item--check"
    >
      <label
        className="fd-form__label"
      >
        <input
          className="fd-form__control"
          id="radio-1"
          name="radio-group-5"
          onChange={[Function]}
          type="radio"
          value="radio-1"
        />
        Option 1
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <label
        className="fd-form__label"
      >
        <input
          checked={true}
          className="fd-form__control"
          id="radio-2"
          name="radio-group-5"
          onChange={[Function]}
          type="radio"
          value="radio-2"
        />
        Option 2
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <label
        className="fd-form__label"
      >
        <input
          className="fd-form__control"
          id="radio-3"
          name="radio-group-5"
          onChange={[Function]}
          type="radio"
          value="radio-3"
        />
        Option 3
      </label>
    </div>
  </div>
</fieldset>
`;
